Fix unwanted scrollbars by avoiding overflow: scroll.
See https://kilianvalkhof.com/2021/css-html/you-want-overflow-auto-not-overflow-scroll/

--- a/js/app/dashboard/dashboard.scss
+++ b/js/app/dashboard/dashboard.scss
@@ -95,7 +95,7 @@ html, body {
     }
 
     &__scroll {
-      overflow: scroll;
+      overflow: auto;
     }
 
     &__search {
@@ -157,7 +157,6 @@ html, body {
   }
 
   &__aside {
-    overflow: scroll;
 
     flex-direction: column;
 
