--- a/js/app/foodtech/dashboard/index.scss
+++ b/js/app/foodtech/dashboard/index.scss
@@ -131,7 +131,7 @@
       }
 
       .panel-body {
-        overflow-y: scroll;
+        overflow-y: auto;
       }
     }
 
