--- a/js/app/search/navbar.scss
+++ b/js/app/search/navbar.scss
@@ -52,7 +52,7 @@
   right: 0;
   margin-left: 15px;
   margin-right: 15px;
-  overflow: scroll;
+  overflow: auto;
   font-size: 0.8em;
 }
 
